infra/sidecar.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-route
  namespace: crackdeal-ns
spec:
  gateways:
  - crackdeal-gateway
  hosts:
   - "*"
  http:
  - name: frontend-stable-route
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: front-end-srv.crackdeal-ns.svc.cluster.local
        subset: stable
        port:
          number: 3000
  - name: frontend-canary-route
    route:
    - destination:
        host: front-end-srv.crackdeal-ns.svc.cluster.local
        subset: canary
        port:
          number: 3000        
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-destination
  namespace: crackdeal-ns
spec:
  host: front-end-srv.crackdeal-ns.svc.cluster.local
  subsets:
  - name: stable
    labels:
      version: "1.0.0"
  - name: canary
    labels:
      version: "1.1.0"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
